--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
       name="Musician Practice Drones"
       content="Musician practice tools for intonation, improvisation and ear-training."
     />
+    <meta
+      name="Description"
+      content="musician,
+    intonation, drone, practice,
+    ear-training, improvisation, tuning, instrument"
+    />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
