--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     />
     <meta
       name="Description"
-      content="musician,
-    intonation, drone, practice,
+      content="musician, cello, violin, bass, drones
+    intonation, drone, practice, pitch,
     ear-training, improvisation, tuning, instrument"
     />
 
@@ -37,8 +37,7 @@
       href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Source+Code+Pro:ital,wght@0,300;0,400;1,200;1,300&display=swap"
       rel="stylesheet"
