updated meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta http-​equiv="ScreenOrientation" content="autoRotate:disabled" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Musician Practice Drones"
-      content="Musician practice tools for intonation, improvisation and ear-training."
+      name="description"
+      content="Musician practice drones for improving intonation, improvisation and ear-training. Great for Cello, Double Bass, Violin, Viola, Guitar and Voice."
     />
     <meta
-      name="Description"
+      name="keywords"
       content="musician, cello, violin, bass, drones
     intonation, drone, practice, pitch,
     ear-training, improvisation, tuning, instrument"
